fixed mistake causing overflow

--- a/css/animations.css
+++ b/css/animations.css
@@ -5,3 +5,7 @@
     z-index: 0;
     visibility: hidden;
 }
+
+#nave-play {
+    top: 0;
+}
